--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
 		"11ty": "npx @11ty/eleventy",
 		"dev": "npx @11ty/eleventy --serve",
 		"css": "npm-run-all css-compile css-prefix",
-		"css-compile": "sass --style compressed --source-map --embed-sources --no-error-css --load-path=node_modules _scss/:assets/css/",
-		"css-lint": "stylelint _scss/",
+		"css-compile": "sass --style compressed --source-map --embed-sources --no-error-css --load-path=node_modules tools/scss/:assets/css/",
+		"css-lint": "stylelint tools/scss/",
 		"css-prefix": "postcss --replace assets/css/main.css --use autoprefixer --map",
 		"watch": "nodemon --delay 3 -e html,scss -x \"npm run css\"",
 		"start": "npm-run-all --parallel watch dev",
